--- a/Subjot/iPhone/en.lproj/MainWindow_iPhone.xib
+++ b/Subjot/iPhone/en.lproj/MainWindow_iPhone.xib
@@ -61,7 +61,7 @@
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIResizesToFullScreen">YES</bool>
 			</object>
-			<object class="IBUITabBarController" id="511037126">
+			<object class="IBUITabBarController" id="653226401">
 				<object class="IBUISimulatedTabBarMetrics" key="IBUISimulatedBottomBarMetrics"/>
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
@@ -70,18 +70,18 @@
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 				<bool key="IBUIHorizontal">NO</bool>
-				<object class="IBUIViewController" key="IBUISelectedViewController" id="934648437">
-					<string key="IBUITitle">Home Stream</string>
-					<object class="IBUITabBarItem" key="IBUITabBarItem" id="1021456471">
-						<string key="IBUITitle">Stream</string>
+				<object class="IBUIViewController" key="IBUISelectedViewController" id="202742629">
+					<string key="IBUITitle">Explore</string>
+					<object class="IBUITabBarItem" key="IBUITabBarItem" id="663516759">
+						<string key="IBUITitle">Explore</string>
 						<object class="NSCustomResource" key="IBUIImage">
 							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">stream.png</string>
+							<string key="NSResourceName">explore.png</string>
 						</object>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
-					<reference key="IBUIParentViewController" ref="511037126"/>
-					<string key="IBUINibName">HomeStream</string>
+					<reference key="IBUIParentViewController" ref="653226401"/>
+					<string key="IBUINibName">ExploreView</string>
 					<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 						<int key="IBUIInterfaceOrientation">1</int>
 						<int key="interfaceOrientation">1</int>
@@ -91,17 +91,18 @@
 				</object>
 				<object class="NSMutableArray" key="IBUIViewControllers">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<reference ref="934648437"/>
-					<object class="IBUIViewController" id="401030880">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="646326370">
-							<string key="IBUITitle">Explore</string>
+					<object class="IBUIViewController" id="1005915878">
+						<string key="IBUITitle">Home Stream</string>
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="26363298">
+							<string key="IBUITitle">Stream</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
-								<string key="NSResourceName">explore.png</string>
+								<string key="NSResourceName">stream.png</string>
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIParentViewController" ref="511037126"/>
+						<reference key="IBUIParentViewController" ref="653226401"/>
+						<string key="IBUINibName">HomeStream</string>
 						<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 							<int key="IBUIInterfaceOrientation">1</int>
 							<int key="interfaceOrientation">1</int>
@@ -109,8 +110,9 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIHorizontal">NO</bool>
 					</object>
-					<object class="IBUIViewController" id="698077958">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="1020992960">
+					<reference ref="202742629"/>
+					<object class="IBUIViewController" id="286958240">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="885752798">
 							<string key="IBUITitle">Notifications</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
@@ -118,7 +120,7 @@
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIParentViewController" ref="511037126"/>
+						<reference key="IBUIParentViewController" ref="653226401"/>
 						<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 							<int key="IBUIInterfaceOrientation">1</int>
 							<int key="interfaceOrientation">1</int>
@@ -126,8 +128,8 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						<bool key="IBUIHorizontal">NO</bool>
 					</object>
-					<object class="IBUIViewController" id="938905449">
-						<object class="IBUITabBarItem" key="IBUITabBarItem" id="882626775">
+					<object class="IBUIViewController" id="688265194">
+						<object class="IBUITabBarItem" key="IBUITabBarItem" id="202384505">
 							<string key="IBUITitle">Settings</string>
 							<object class="NSCustomResource" key="IBUIImage">
 								<string key="NSClassName">NSImage</string>
@@ -135,7 +137,7 @@
 							</object>
 							<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 						</object>
-						<reference key="IBUIParentViewController" ref="511037126"/>
+						<reference key="IBUIParentViewController" ref="653226401"/>
 						<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 							<int key="IBUIInterfaceOrientation">1</int>
 							<int key="interfaceOrientation">1</int>
@@ -144,7 +146,7 @@
 						<bool key="IBUIHorizontal">NO</bool>
 					</object>
 				</object>
-				<object class="IBUITabBar" key="IBUITabBar" id="7433674">
+				<object class="IBUITabBar" key="IBUITabBar" id="248167938">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">266</int>
 					<string key="NSFrame">{{0, 431}, {320, 49}}</string>
@@ -181,7 +183,7 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">rootViewController</string>
 						<reference key="source" ref="380026005"/>
-						<reference key="destination" ref="511037126"/>
+						<reference key="destination" ref="653226401"/>
 					</object>
 					<int key="connectionID">18</int>
 				</object>
@@ -222,77 +224,77 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">12</int>
-						<reference key="object" ref="511037126"/>
+						<reference key="object" ref="653226401"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="7433674"/>
-							<reference ref="934648437"/>
-							<reference ref="698077958"/>
-							<reference ref="401030880"/>
-							<reference ref="938905449"/>
+							<reference ref="248167938"/>
+							<reference ref="1005915878"/>
+							<reference ref="286958240"/>
+							<reference ref="202742629"/>
+							<reference ref="688265194"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">13</int>
-						<reference key="object" ref="7433674"/>
-						<reference key="parent" ref="511037126"/>
+						<reference key="object" ref="248167938"/>
+						<reference key="parent" ref="653226401"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="934648437"/>
+						<reference key="object" ref="1005915878"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="1021456471"/>
+							<reference ref="26363298"/>
 						</object>
-						<reference key="parent" ref="511037126"/>
+						<reference key="parent" ref="653226401"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">15</int>
-						<reference key="object" ref="401030880"/>
+						<reference key="object" ref="202742629"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="646326370"/>
+							<reference ref="663516759"/>
 						</object>
-						<reference key="parent" ref="511037126"/>
+						<reference key="parent" ref="653226401"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">16</int>
-						<reference key="object" ref="646326370"/>
-						<reference key="parent" ref="401030880"/>
+						<reference key="object" ref="663516759"/>
+						<reference key="parent" ref="202742629"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">17</int>
-						<reference key="object" ref="1021456471"/>
-						<reference key="parent" ref="934648437"/>
+						<reference key="object" ref="26363298"/>
+						<reference key="parent" ref="1005915878"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
-						<reference key="object" ref="698077958"/>
+						<reference key="object" ref="286958240"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="1020992960"/>
+							<reference ref="885752798"/>
 						</object>
-						<reference key="parent" ref="511037126"/>
+						<reference key="parent" ref="653226401"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">20</int>
-						<reference key="object" ref="1020992960"/>
-						<reference key="parent" ref="698077958"/>
+						<reference key="object" ref="885752798"/>
+						<reference key="parent" ref="286958240"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">21</int>
-						<reference key="object" ref="938905449"/>
+						<reference key="object" ref="688265194"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="882626775"/>
+							<reference ref="202384505"/>
 						</object>
-						<reference key="parent" ref="511037126"/>
+						<reference key="parent" ref="653226401"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">22</int>
-						<reference key="object" ref="882626775"/>
-						<reference key="parent" ref="938905449"/>
+						<reference key="object" ref="202384505"/>
+						<reference key="parent" ref="688265194"/>
 					</object>
 				</object>
 			</object>
@@ -306,6 +308,7 @@
 					<string>13.IBPluginDependency</string>
 					<string>14.CustomClassName</string>
 					<string>14.IBPluginDependency</string>
+					<string>15.CustomClassName</string>
 					<string>15.IBPluginDependency</string>
 					<string>19.IBPluginDependency</string>
 					<string>2.IBAttributePlaceholdersKey</string>
@@ -324,6 +327,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>HomeStreamController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>ExploreViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<object class="NSMutableDictionary">
