--- a/Subjot/HomeStream.xib
+++ b/Subjot/HomeStream.xib
@@ -43,14 +43,13 @@
 				<int key="NSvFlags">274</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
-					<object class="IBUITableView" id="271404605">
+					<object class="IBUITableView" id="688938672">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 460}</string>
 						<reference key="NSSuperview" ref="191373211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView"/>
-						<object class="NSColor" key="IBUIBackgroundColor" id="834111301">
+						<object class="NSColor" key="IBUIBackgroundColor" id="1007317787">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
 						</object>
@@ -67,7 +66,6 @@
 				</object>
 				<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -79,15 +77,14 @@
 				<object class="IBUISimulatedStatusBarMetrics" key="IBUISimulatedStatusBarMetrics"/>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewController" id="1031137153">
-				<object class="IBUITableView" key="IBUIView" id="767261115">
+			<object class="IBUITableViewController" id="663484524">
+				<object class="IBUITableView" key="IBUIView" id="45755101">
 					<reference key="NSNextResponder"/>
 					<int key="NSvFlags">274</int>
 					<string key="NSFrame">{{0, 20}, {320, 460}}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView"/>
-					<reference key="IBUIBackgroundColor" ref="834111301"/>
+					<reference key="IBUIBackgroundColor" ref="1007317787"/>
 					<bool key="IBUIOpaque">NO</bool>
 					<bool key="IBUIClipsSubviews">YES</bool>
 					<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -123,32 +120,32 @@
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="767261115"/>
-						<reference key="destination" ref="1031137153"/>
+						<reference key="source" ref="45755101"/>
+						<reference key="destination" ref="663484524"/>
 					</object>
 					<int key="connectionID">12</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
-						<reference key="source" ref="767261115"/>
-						<reference key="destination" ref="1031137153"/>
+						<reference key="source" ref="45755101"/>
+						<reference key="destination" ref="663484524"/>
 					</object>
 					<int key="connectionID">13</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">delegate</string>
-						<reference key="source" ref="271404605"/>
-						<reference key="destination" ref="1031137153"/>
+						<reference key="source" ref="688938672"/>
+						<reference key="destination" ref="663484524"/>
 					</object>
 					<int key="connectionID">15</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
-						<reference key="source" ref="271404605"/>
-						<reference key="destination" ref="1031137153"/>
+						<reference key="source" ref="688938672"/>
+						<reference key="destination" ref="663484524"/>
 					</object>
 					<int key="connectionID">16</int>
 				</object>
@@ -156,9 +153,17 @@
 					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">streamViewController</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="1031137153"/>
+						<reference key="destination" ref="663484524"/>
 					</object>
 					<int key="connectionID">17</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">hostingController</string>
+						<reference key="source" ref="663484524"/>
+						<reference key="destination" ref="372490531"/>
+					</object>
+					<int key="connectionID">19</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -175,7 +180,7 @@
 						<reference key="object" ref="191373211"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="271404605"/>
+							<reference ref="688938672"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -192,22 +197,22 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">10</int>
-						<reference key="object" ref="1031137153"/>
+						<reference key="object" ref="663484524"/>
 						<object class="NSMutableArray" key="children">
 							<bool key="EncodedWithXMLCoder">YES</bool>
-							<reference ref="767261115"/>
+							<reference ref="45755101"/>
 						</object>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Stream View Controller</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">11</int>
-						<reference key="object" ref="767261115"/>
-						<reference key="parent" ref="1031137153"/>
+						<reference key="object" ref="45755101"/>
+						<reference key="parent" ref="663484524"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">14</int>
-						<reference key="object" ref="271404605"/>
+						<reference key="object" ref="688938672"/>
 						<reference key="parent" ref="191373211"/>
 					</object>
 				</object>
@@ -249,40 +254,9 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">17</int>
+			<int key="maxID">19</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<bool key="EncodedWithXMLCoder">YES</bool>
-				<object class="IBPartialClassDescription">
-					<string key="className">HomeStreamController</string>
-					<string key="superclassName">UIViewController</string>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">streamViewController</string>
-						<string key="NS.object.0">StreamViewController</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">streamViewController</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
-							<string key="name">streamViewController</string>
-							<string key="candidateClassName">StreamViewController</string>
-						</object>
-					</object>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/HomeStreamController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">StreamViewController</string>
-					<string key="superclassName">UITableViewController</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/StreamViewController.h</string>
-					</object>
-				</object>
-			</object>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
